--- a/readme
+++ b/readme
@@ -1,7 +1,10 @@
-npx eas build -p android --profile preview
+# Projeto Didder Live
+Foi desenvolvido a partir da ideia do usuario poder fazer lives,movimentações em dinheiro e toda interação ja conhecida por quem consome app de streaming.
 
+Adicionamos tambem ferramentas para que o usuario tenha interações com quem esta assistindo e para que tambem o operador tenha essa interação.
 
-headers: src/components/headers
-modals: src/components/modals (selecionar país), o restante pode pegar em src/screens/profile/edit-profile
-radio-button e variante: src/components/radio-button
-componente selecionar opção um ou dois: src/screens/profile/settings
+# Desenvolvido com: Front: 
+React Native (Expo) 
+Figma
+
+Desenvolvido e criado por Athena Agency e parceiros.
